--- a/2ndEdition/andres.fernandez.rosa/Main/res/values/strings.xml
+++ b/2ndEdition/andres.fernandez.rosa/Main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
 	<string name="boton1">Llamar a Google</string>
-	<string name="boton2">Llamar a telf</string>
-	<string name="boton3">Botón 3</string>
+	<string name="boton2">Mostrar telf</string>
+	<string name="boton3">Llamar a telf</string>
 </resources>
