--- a/2ndEdition/rafael.sanchez/08-Background/res/values/strings.xml
+++ b/2ndEdition/rafael.sanchez/08-Background/res/values/strings.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Mapas</string>
+    <string name="app_name">Background</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="map_key">0gHhXwQu4cokl0txy7_a8JFOxB56b_28-HBxXuw</string>
-    
-    
+    <string name="title_thread">Esto es un TimerTask cada %1$d segundos</string>
 
 </resources>
