--- a/2ndEdition/jose.fernandez.rosa/3-Listas/res/values/strings.xml
+++ b/2ndEdition/jose.fernandez.rosa/3-Listas/res/values/strings.xml
@@ -7,4 +7,5 @@
 	<string name="banner1">Listas simples</string>
 	<string name="btn_simple">Lista simple</string>
 	<string name="btn_advanced">Lista avanzada</string>
+	<string name="Icon">Icon</string>
 </resources>
