--- a/2ndEdition/omar.pedraza/05 AsyncTests/res/values/strings.xml
+++ b/2ndEdition/omar.pedraza/05 AsyncTests/res/values/strings.xml
@@ -2,7 +2,13 @@
 <resources>
     <string name="app_name">AsyncTests</string>
 
-    <string name="service_text">Service running during %s seconds</string>
-    <string name="thread_toast_message">Running thread on background during %s seconds</string>
+    <string name="location_service_text">The current position is %1$s, %2$s</string>
+    <string name="service_text">Service running during %1$s seconds</string>
+    <string name="thread_toast_message">Running thread on background during %1$s seconds</string>
     <string name="timer_toast_message">Running thread on background</string>
+
+    <string name="start_location_service">Start location service</string>
+    <string name="start_service">Start service</string>
+    <string name="stop_location_service">Stop location service</string>
+    <string name="stop_service">Stop service</string>
 </resources>
