--- a/2ndEdition/laura.nunezgonzalez/Yncat/res/values/strings.xml
+++ b/2ndEdition/laura.nunezgonzalez/Yncat/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="map_key">0YJ7RMxvssq_fFV0GpzVjjnn-empnTCfBVFdbsA</string>
-    <string name="bmapa">Mapa</string>
+    <string name="bmapa">Mapa 2</string>
     <string name="toast_msg_location">Localizado en... </string>
     <string name="bfoto">Foto</string>
         <string name="hello">Hello World, PhotoIntentActivity!</string>
